# test-automation-libraries

./: README.md  pyproject.toml  setup.py
.github/workflow/: python-package.yml
.github/workflows/: python-publish.yml
test_automation_libraries/selenium_lib/: selenium_lib.py
tests/: test_selenium_lib.py
tests/test_selenium_lib/: test_selenium_lib.py
