[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "test-automation-library"
version = "0.1.0"
description = "Description of your project"
authors = ["Kuldip Mehta <kulsmehta13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
# Add your project dependencies here
# For example:
# requests = "^2.25.1"

[tool.poetry.dev-dependencies]
# Add development dependencies here

[build-system]
requires = ["poetry-core>=1.0.0"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
lines_after_imports = 2
lines_between_types = 1

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"
